# Selfie-Stabilizer

./: .gitignore  README.md  animate.sh  pyproject.toml  readme.md
examples/: stabilize_max.py
selfie_stabilizer/: __init__.py  lib.py  main.py
src/: main.py
src/selfie_stabilizer/: __init__.py  lib.py  main.py
