[project]
name = "selfie-stabilizer"
version = "0.1.0"
description = "Converts a folder of selfie images into a stabilized video."
readme = "README.md"
authors = [
    { name = "Jaime Liew", email = "jaimeliew1@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "dlib-bin>=19.24.6",
    "ffmpeg-python>=0.2.0",
    "imutils>=0.5.4",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "opencv-python>=4.11.0.86",
    "scipy>=1.13.1",
    "tqdm>=4.67.1",
]

[project.scripts]
selfie-stabilizer = "selfie_stabilizer:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
